Fixes for unit tests, refactor to use test data factory remove redunndant test code

--- a/force-app/main/default/classes/GGW_ApplicationCtrlTest.cls
+++ b/force-app/main/default/classes/GGW_ApplicationCtrlTest.cls
@@ -11,65 +11,8 @@ public class GGW_ApplicationCtrlTest {
     
     @TestSetup
     static void makeData(){
-        // Create test sections
-        GGW_Section__c stmt_need = new GGW_Section__c();
-        stmt_need.Name = 'Statement of need';
-        stmt_need.Sort_Order__c = 1;
-        stmt_need.Suggested__c = true;
-        stmt_need.Recommended__c = true;
-        insert stmt_need;
-        // create related Blocks
-        GGW_Content_Block__c cblock = new GGW_Content_Block__c();
-        cblock.Name = 'Project XYZ';
-        cblock.Section__c = stmt_need.Id; // Link thsi block to Statement of need
-        cblock.Description__c = 'The oceans are in more trouble than ever before. Right now it is estimated that up to 12 million metric tons of plastic—everything from plastic bottles and bags to microbeads—end up in the oceans each year. That’s a truckload of trash every minute.';
-        cblock.Short_Description__c = 'Project XYZ';
-        insert cblock;
-        // -----------
-        GGW_Section__c goal = new GGW_Section__c();
-        goal.Name = 'Goals and objectives';
-        goal.Sort_Order__c = 2;
-        goal.Suggested__c = true;
-        goal.Recommended__c = true;
-        insert goal;
-        // create related Blocks
-        GGW_Content_Block__c bblock = new GGW_Content_Block__c();
-        bblock.Name = 'New text';
-        bblock.Section__c = goal.Id; // Link thsi block to Statement of need
-        bblock.Description__c = 'Text placeholder try edit this text and save lets edit this text. Then add to library to reuse later on.';
-        bblock.Short_Description__c = 'New block';
-        insert bblock;
-        // -----------
-        // Create test sections
-        GGW_Section__c program = new GGW_Section__c();
-        program.Name = 'Program narrative';
-        program.Sort_Order__c = 3;
-        program.Suggested__c = true;
-        program.Recommended__c = true;
-        insert program;
-        // create related Blocks
-        GGW_Content_Block__c dblock = new GGW_Content_Block__c();
-        dblock.Name = 'Green Pilot Program';
-        dblock.Section__c = program.Id; // Link thsi block to Statement of need
-        dblock.Description__c = 'The Environmental Green Pilot Program Proposal is an example of a proposal using Proposal Pack to pitch an environmental green pilot program to a community to reduce utility costs through renewable energy use.';
-        dblock.Short_Description__c = 'Project XYZ';
-        insert dblock;
-
-        // Not selected section for search
-        GGW_Section__c src = new GGW_Section__c();
-        src.Name = 'Test search';
-        src.Sort_Order__c = 2;
-        src.Suggested__c = false;
-        src.Recommended__c = false;
-        insert src;
-        // create related Blocks
-        GGW_Content_Block__c sblock = new GGW_Content_Block__c();
-        sblock.Name = 'Search block';
-        sblock.Section__c = src.Id; // Link thsi block to Statement of need
-        sblock.Description__c = 'Text placeholder try edit this text and save lets edit this text. Then add to library to reuse later on.';
-        sblock.Short_Description__c = 'Search block';
-        insert sblock;
-
+        // Samlple content data for testing methods
+        GGW_TestDataFactory.createGrantContentTestData();
     }
 
     @isTest
@@ -89,12 +32,12 @@ public class GGW_ApplicationCtrlTest {
 
         Test.stopTest();
         
-        System.assertEquals('MyTest Grant', app.Name); 
-        System.assertEquals('Progress', app.Status__c); 
+        System.assertEquals('MyTest Grant', app.Name, 'Grant name did not match'); 
+        System.assertEquals('Progress', app.Status__c, 'Initial grant status not set correctly to Progress'); 
         // Check if all section are created for app
         List<GGW_Selected_Item__c> selectedItems = [SELECT Id, Name, Grant_Application__c, GGW_Section__c, Sort_Order__c 
                                                     FROM GGW_Selected_Item__c WHERE Grant_Application__c =:app.Id];
-        System.assertEquals(sections.size(), selectedItems.size()); 
+        System.assertEquals(sections.size(), selectedItems.size(), 'Clone for grant sections to items did not complete'); 
     }
     @isTest
     static void testFindSections(){
@@ -102,21 +45,21 @@ public class GGW_ApplicationCtrlTest {
         Test.startTest();
         List<GGW_ApplicationCtrl.GGW_SectionWrapper> sw = GGW_ApplicationCtrl.findSections(searchKey);
         Test.stopTest();
-        System.assertNotEquals(0, sw.size());
-        System.assertEquals('Test search', sw[0].label);
-        System.assertEquals(false, sw[0].selected);
+        System.assertNotEquals(0, sw.size(), 'No sections found in test data');
+        System.assertEquals('Test search', sw[0].label, 'First Section label did not match value - Test search');
+        System.assertEquals(false, sw[0].selected, 'First section selected not correct');
 
         // Negative test asserts not found section by key
         searchKey = 'fail';
         List<GGW_ApplicationCtrl.GGW_SectionWrapper> swfail = GGW_ApplicationCtrl.findSections(searchKey);
-        System.assertEquals(0, swfail.size());
+        System.assertEquals(0, swfail.size(), 'Section search for hidden section did not return valid data');
     }
     @isTest
     static void testGetSections(){
         Test.startTest();
         List<GGW_ApplicationCtrl.GGW_SectionWrapper> sw = GGW_ApplicationCtrl.getSections();
         Test.stopTest();
-        System.assertEquals(3, sw.size());
+        System.assertEquals(3, sw.size(), 'No sample section data found');
     }
     @isTest
     static void testContentBlocks(){
@@ -126,7 +69,7 @@ public class GGW_ApplicationCtrlTest {
         List<GGW_ApplicationCtrl.GGW_ContentBlockWrapper> blockList = GGW_ApplicationCtrl.getContentBlocks(sectionId);
         Test.stopTest();
         // TODO add detailed assertions
-        System.assertNotEquals(0, blockList.size());
+        System.assertNotEquals(0, blockList.size(), 'No sample data content blocks are found');
     }
     @isTest
     static void testAddTextBlockToLibrary(){
@@ -138,9 +81,9 @@ public class GGW_ApplicationCtrlTest {
         Test.stopTest();
         // Check if new block was created with default name
         GGW_Content_Block__c block = [SELECT Id, Name, Section__c, Description__c FROM GGW_Content_Block__c WHERE Id =:str ];
-        System.assertEquals('Test block', block.Name);
-        System.assertEquals(str, block.Id);
-        System.assertEquals(sectionList[0].Id, block.Section__c);
+        System.assertEquals('Test block', block.Name, 'Block name not matching');
+        System.assertEquals(str, block.Id, 'No Block ID found');
+        System.assertEquals(sectionList[0].Id, block.Section__c, 'Block link to Section missing');
     }
     @isTest
     static void testCreateNewSection(){
@@ -151,13 +94,13 @@ public class GGW_ApplicationCtrlTest {
         // assertion checks and set up
         GGW_Section__c maxOrder = [SELECT Sort_Order__c FROM GGW_Section__c WHERE Suggested__c = true  ORDER BY Sort_Order__c desc LIMIT 1];
         GGW_Section__c newSec = [SELECT Id, Name, Sort_Order__c, Recommended__c, Suggested__c FROM GGW_Section__c WHERE ID =: sw.recordid];
-        System.assertEquals(name, sw.label);
+        System.assertEquals(name, sw.label, 'Section name did not match');
         // Ensure the order was set correct for new section as last in list
-        System.assertEquals(maxOrder.Sort_Order__c, newSec.Sort_Order__c);
+        System.assertEquals(maxOrder.Sort_Order__c, newSec.Sort_Order__c, 'Section order not valid');
         // Ensure defaults selected check
-        System.assertEquals(newSec.Recommended__c,sw.selected);
-        System.assertEquals(true, newSec.Recommended__c);
-        System.assertEquals(true, newSec.Suggested__c);
+        System.assertEquals(newSec.Recommended__c,sw.selected, 'Recommended section vs selected not matching');
+        System.assertEquals(true, newSec.Recommended__c, 'Default recommended section not valid');
+        System.assertEquals(true, newSec.Suggested__c, 'Default suggested section not set');
     }
 
     @isTest
@@ -176,11 +119,11 @@ public class GGW_ApplicationCtrlTest {
         GGW_ApplicationCtrl.GGW_GrantApplicationWrapper appWrapper = GGW_ApplicationCtrl.getApplication(app.Id);
         Test.stopTest();
         // assertion checks happy path and set up
-        System.assertEquals(app.Id, appWrapper.recordid);
-        System.assertEquals('Grant App',appWrapper.name);
-        System.assertEquals('Progress', appWrapper.status);
+        System.assertEquals(app.Id, appWrapper.recordid, 'No new grant was created');
+        System.assertEquals('Grant App',appWrapper.name, 'Default grant name did not match - Grant App');
+        System.assertEquals('Progress', appWrapper.status, 'Default grant status did not match expected - Progress');
         // Check selected Items created as content blocks wraper to number of sections
-        System.assertEquals(sections.size(),appWrapper.selectedContentBlock.size());
+        System.assertEquals(sections.size(),appWrapper.selectedContentBlock.size(), 'The copy of created blocks from template did not match expected number');
     }
     @isTest
     static void testSaveSelectedSectionText(){
@@ -205,7 +148,7 @@ public class GGW_ApplicationCtrlTest {
         Test.stopTest();
         // assertion checks that item saved the Block text
         List<GGW_Selected_Item__c> savedItemList = GGW_ApplicationCtrl.querySelectedItemsByGrant(app.Id);
-        System.assertEquals(blocktext, savedItemList[0].Text_Block__c); 
+        System.assertEquals(blocktext, savedItemList[0].Text_Block__c, 'Block text did not match template'); 
     }
     @isTest
     static void testReorderSections(){
@@ -234,8 +177,8 @@ public class GGW_ApplicationCtrlTest {
         Test.stopTest();
         // Check fliped order
         List<GGW_Selected_Item__c> selOrderedList = GGW_ApplicationCtrl.querySelectedItemsByGrant(app.Id);
-        System.assertEquals(last, selOrderedList[0].Id);                                             
-        System.assertEquals(first, selOrderedList[selOrderedList.size()-1].Id);
+        System.assertEquals(last, selOrderedList[0].Id, 'Last seleected section item did not match expected');                                             
+        System.assertEquals(first, selOrderedList[selOrderedList.size()-1].Id, 'First seleectd section item did not match selected');
     }
     @isTest
     static void testUpdateSelectedItemText(){
@@ -257,11 +200,11 @@ public class GGW_ApplicationCtrlTest {
         GGW_ApplicationCtrl.updateSelectedItemText(itemid, richtext);
         Test.stopTest();
 
-        System.assertEquals(count, selItemList.size());
+        System.assertEquals(count, selItemList.size(), 'Count of selected items not valid');
         // Check text was updated, query again to get updated record
         GGW_Selected_Item__c selItem = [SELECT Id, Name, Text_Block__c, GGW_Section__c, Grant_Application__c, Sort_Order__c 
                                                 FROM GGW_Selected_Item__c WHERE Id =:itemid];
-        System.assertEquals(richtext, selItem.Text_Block__c);
+        System.assertEquals(richtext, selItem.Text_Block__c, 'Rich text in block not matching expected text');
     }
 
     @isTest
